<resources>
    <string name="app_name">Dices</string>
    <string name="nao_lancado">Não lançado</string>
    <string name="jogar">Jogar</string>
    <string name="info_jogo_dados">Clique no botão abaixo para jogar o dado</string>
    <string name="configuracoes">Configurações</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="entrada_n_faces">Entre com o número de faces</string>
    <string name="info_n_dados">Selecione o número de dados</string>
    <string name="salvar">Salvar</string>
</resources>